# OpenStock

./: Cargo.toml  Deployment.md  DeploymentChecklist.md  Dockerfile  PerformanceReport.md  README.md  project_overview.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  validation.rs
src/commands/: add.rs  commands.rs  delete.rs  filter.rs  help.rs  import.rs  list.rs  migrate.rs  mod.rs  stats.rs  update.rs  validate.rs
src/config/: config.rs  mod.rs  optimization.rs
src/db/: migrate.rs  mod.rs  queries.rs  schema.rs
src/error/: error.rs  mod.rs
src/logging/: logger.rs  mod.rs
src/output/: format.rs  mod.rs
src/plugins/: loader.rs  mod.rs
tests/: add_item.rs  cli_framework.rs  db_schema.rs  delete.rs  deployment.rs  filter.rs  import.rs  list.rs  performance.rs  setup.test.rs  stats.rs  update.rs  validate.rs  validation.rs
