[package]
name = "inventory"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log4rs = "1.3"
csv = "1.3"
libloading = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
tempfile = "3.8"

[profile.release]
opt-level = 3
strip = true

[[test]]
name = "setup"
path = "tests/setup.test.rs" 